[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "csv-tools"
version = "0.2.0"
description = "Small stdlib-only CLI for merging, deduplicating, and reordering semicolon-delimited CSVs that may start with # comment lines."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Jan Alexandr Kopřiva", email = "jan.alexandr.kopriva@gmail.com" }]
keywords = ["csv", "merge", "dedupe", "cli", "data-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
csv-tools = "csv_tools.cli:main"

[project.urls]
Homepage = "https://github.com/koprjaa/csv-tools"
Repository = "https://github.com/koprjaa/csv-tools"
Issues = "https://github.com/koprjaa/csv-tools/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/csv_tools"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-q --strict-markers"
